--- a/istore/package.json
+++ b/istore/package.json
@@ -16,6 +16,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.17.0",
     "http-errors": "~1.6.3",
     "md5": "^2.2.1",
     "mongoose": "^5.7.1",
