--- a/istore/package.json
+++ b/istore/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.2",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "csurf": "^1.10.0",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
