--- a/istore/client/package.json
+++ b/istore/client/package.json
@@ -9,6 +9,7 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
+    "react-facebook": "^8.1.2",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.7",
     "react-load-script": "0.0.6",
