--- a/istore/package.json
+++ b/istore/package.json
@@ -23,6 +23,7 @@
     "http-errors": "~1.6.3",
     "md5": "^2.2.1",
     "mongoose": "^5.7.1",
+    "mongoose-findorcreate": "^3.0.0",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
