--- a/istore/client/package.json
+++ b/istore/client/package.json
@@ -50,28 +50,28 @@
         ]
     },
     "dependencies": {
+        "bootstrap": "^4.3.1",
         "chart.js": "2.7.3",
         "classnames": "2.2.6",
+        "google-maps-react": "^2.0.2",
+        "js-cookie": "^2.2.1",
         "moment": "2.24.0",
         "node-sass": "4.11.0",
         "nouislider": "13.1.1",
         "react": "16.8.4",
+        "react-bootstrap": "^1.0.0-beta.12",
         "react-chartjs-2": "2.7.4",
         "react-copy-to-clipboard": "5.0.1",
         "react-datetime": "2.16.3",
         "react-dom": "16.8.4",
-        "react-google-maps": "9.4.5",
-        "react-router-dom": "4.3.1",
-        "react-scripts": "2.1.8",
-        "reactstrap": "7.1.0",
-        "bootstrap": "^4.3.1",
-        "google-maps-react": "^2.0.2",
-        "js-cookie": "^2.2.1",
-        "react-bootstrap": "^1.0.0-beta.12",
         "react-facebook": "^8.1.2",
         "react-facebook-login": "^4.1.1",
         "react-google-login": "^5.0.7",
-        "react-load-script": "0.0.6"
+        "react-google-maps": "9.4.5",
+        "react-load-script": "0.0.6",
+        "react-router-dom": "4.3.1",
+        "react-scripts": "2.1.8",
+        "reactstrap": "7.1.0"
     },
     "devDependencies": {
         "@types/googlemaps": "3.30.18",
