--- a/istore/package.json
+++ b/istore/package.json
@@ -24,7 +24,8 @@
     "md5": "^2.2.1",
     "mongoose": "^5.7.1",
     "mongoose-findorcreate": "^3.0.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "node-sass": "^4.13.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.3"
