--- a/istore/package.json
+++ b/istore/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.2",
+    "config": "^3.2.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "csurf": "^1.10.0",
@@ -25,7 +26,9 @@
     "mongoose": "^5.7.1",
     "mongoose-findorcreate": "^3.0.0",
     "morgan": "~1.9.1",
-    "node-sass": "^4.13.0"
+    "node-sass": "^4.13.0",
+    "nodemailer": "^6.3.1",
+    "uid": "0.0.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.3"
