--- a/istore/client/package.json
+++ b/istore/client/package.json
@@ -56,7 +56,7 @@
         "google-maps-react": "^2.0.2",
         "js-cookie": "^2.2.1",
         "moment": "2.24.0",
-        "node-sass": "4.11.0",
+        "node-sass": "^4.11.0",
         "nouislider": "13.1.1",
         "react": "16.8.4",
         "react-bootstrap": "^1.0.0-beta.12",
@@ -66,6 +66,7 @@
         "react-dom": "16.8.4",
         "react-facebook": "^8.1.2",
         "react-facebook-login": "^4.1.1",
+        "react-geocode": "^0.2.1",
         "react-google-login": "^5.0.7",
         "react-google-maps": "9.4.5",
         "react-load-script": "0.0.6",
