--- a/istore/package.json
+++ b/istore/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^5.7.1",
     "mongoose-findorcreate": "^3.0.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "node-sass": "^4.13.0",
     "nodemailer": "^6.3.1",
     "uid": "0.0.2"
