--- a/istore/package.json
+++ b/istore/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "body-parser": "^1.19.0",
+        "cloudinary": "^1.18.1",
         "concurrently": "^4.1.2",
         "config": "^3.2.4",
         "connect-mongo": "^3.2.0",
@@ -31,8 +32,10 @@
         "mongoose-findorcreate": "^3.0.0",
         "morgan": "~1.9.1",
         "multer": "^1.4.2",
+        "multiparty": "^4.2.1",
         "node-sass": "^4.13.0",
         "nodemailer": "^6.3.1",
+        "path": "^0.12.7",
         "uid": "0.0.2"
     },
     "devDependencies": {
